# SIFT

./: .gitignore  CMakeLists.txt  README.md  plots.ipynb
docs/: Final Report.md  Mid-Report.md  Scale-Invariant Feature Transform.md
src/: gauss.cpp  gauss.h  img.cpp  img.h  logger.hpp  main.cpp  math.cpp  math.h  sift.cpp  sift.hpp
